--- a/public/screen.css
+++ b/public/screen.css
@@ -11,12 +11,12 @@ body {
     display: block;
     width: 2em;
     height: 2em;
-    border: .5em solid royalblue;
+    border: .5em solid white;
     float: left;
 }
 
 .spot-on {
-    background: darkred;
+    border-color: black;
 }
 
 .spot-clear {
@@ -27,7 +27,7 @@ body {
     display: block;
     width: 2em;
     height: 2em;
-    border: .5em solid darkred;
+    border: .5em solid black;
     float: left;
 }
 
