--- a/public/screen.css
+++ b/public/screen.css
@@ -1,22 +1,32 @@
+@import url("https://fonts.googleapis.com/css?family=Karla");
+
 body {
     background: navajowhite;
-    margin: 5em;
-    font-family: sans-serif;
+    margin: 2em;
+    font-family: 'Karla', monospace;
+    -webkit-font-smoothing: antialiased;
+    font-weight: normal;
+    font-size: 1.2em;
+}
+
+.container {
+    max-width: 30em;
+    margin: 0 auto;
 }
 
 .reset-button {
     float: left;
 }
 
-.game-board {
-    clear: left;
-}
-
 .game-board, .game-pieces {
     float:left;
     display: block;
     width: 12em;
-    margin: 1em;
+    margin: 1em 1em 1em 0;
+}
+
+.game-board {
+    clear: left;
 }
 
 .instructions {
@@ -43,7 +53,7 @@ body {
     display: block;
     width: 2em;
     height: 2em;
-    border: .4em solid black;
+    border: .4em solid #333;
     float: left;
     margin: .1em;
 }
@@ -54,4 +64,19 @@ body {
 
 .piece-hidden {
     display: none;
+}
+
+a {
+    color: #4169e1;
+    text-decoration: none;
+}
+
+a:hover,
+a:focus {
+    text-decoration: underline;
+}
+
+.pure-button {
+    background: transparent;
+    border: 2px solid black;
 }
