--- a/public/screen.css
+++ b/public/screen.css
@@ -2,6 +2,7 @@
 
 body {
     background: navajowhite;
+    color: #3E3E3E;
     margin: 2em;
     font-family: 'Karla', monospace;
     -webkit-font-smoothing: antialiased;
@@ -23,6 +24,9 @@ body {
 
 .game-board {
     clear: left;
+    border-radius: .2em;
+    background: white;
+    box-shadow: 0 .1em .1em 0 rgba(0,0,102,0.2);
 }
 
 .instructions {
@@ -34,11 +38,14 @@ body {
     width: 2em;
     height: 2em;
     border: .5em solid white;
+    border-radius: .2em;
+    box-shadow: inset 0 .1em .1em 0 rgba(0,0,102,0.2);
     float: left;
 }
 
 .spot-on {
-    border-color: black;
+    border-color: #1A1A1B;
+    box-shadow: inset 0 0 0 0;
 }
 
 .spot-clear {
@@ -52,6 +59,8 @@ body {
     border: .4em solid #333;
     float: left;
     margin: .1em;
+    border-radius: .2em;
+    box-shadow: 0 .1em .1em 0 rgba(0,0,102,0.2);
 }
 
 .piece-selected {
@@ -63,7 +72,7 @@ body {
 }
 
 a {
-    color: #4169e1;
+    color: #4169E1;
     text-decoration: none;
 }
 
@@ -76,5 +85,5 @@ a:focus {
     margin-right: 1em;
     float:left;
     background: transparent;
-    border: 2px solid black;
+    border: 2px solid #3E3E3E;
 }
