--- a/public/screen.css
+++ b/public/screen.css
@@ -43,7 +43,12 @@ body {
     float: left;
 }
 
-.spot-on {
+.spot:hover {
+    border-color: #EEE;
+    box-shadow: inset 0 .1em .1em 0 rgba(0,0,102,0.4);
+}
+
+.spot-on, .spot-on:hover {
     border-color: #1A1A1B;
     box-shadow: inset 0 0 0 0;
 }
@@ -63,7 +68,7 @@ body {
     box-shadow: 0 .1em .1em 0 rgba(0,0,102,0.2);
 }
 
-.piece-selected {
+.piece:hover, .piece-selected {
     border-color: dimgray;
 }
 
@@ -76,8 +81,7 @@ a {
     text-decoration: none;
 }
 
-a:hover,
-a:focus {
+a:hover, a:focus {
     text-decoration: underline;
 }
 
