--- a/screen.css
+++ b/screen.css
@@ -16,12 +16,9 @@ body {
     margin: 0 auto;
 }
 
-footer {
+.summary {
+    clear: both;
     padding-top: 1em;
-}
-
-.container {
-    height: 500px;
 }
 
 .game-board, .game-pieces {
